# persona-society-sim

./: .gitignore  AGENTS.md  INSTALL.md  OPTIMIZATION_GUIDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  research-generative-agents-findings.md
agents/: agent.py  gemini_backend.py  language_backend.py  memory.py  planner.py  retrieval.py
artifacts/: baseline_comparison.json  judge_validation.json  steerability_smoke.json
configs/: meta.playbook.yaml  personas.bigfive.yaml  probes.yaml  run.fast.yaml  run.medium.yaml  run.small.yaml  steering.layers.yaml
docs/: README.md  design.md  eval.md  explanation-known-gaps.md  explanation-steering.md  howto-compute-steering-vectors.md  howto-migrate-legacy-data.md  howto-migrate-vectors.md  howto-run-simulations.md  jacobian-lens-integration.md  jacobian-lens-phase-two-results.md  jacobian-lens-phase-two.md  jacobian-lens-pilot-report.md  migration.md  parquet_schema.md  prior-work-synthesis.md  reference-cli.md  reference-config.md  reference-data-schema.md  reference-modules.md  tutorial-getting-started.md
env/: actions.py  economy.py  institutions.py  world.py
eval/: probes.py
experiments/: caa_steering_limits_research.md  factorial_prompts.jsonl  factorial_prompts.manifest.json
interpretability/: README.md  __init__.py  analyze_factorial.py  build_factorial_prompts.py  capture_pilot_event.py  common.py  export_traces.py  fit_lens.py  merge_lenses.py  pyproject.toml  run_factorial.py  trait_report.py
metrics/: graphs.py  persona_bands.py  probe_rubrics.py  research.py  run_probe-run.jsonl  run_probe-run_agents.parquet  run_probe-run_alpha_aggregates.parquet  run_probe-run_trait_aggregates.parquet  social_dynamics.py  tick_instrumentation.py  tracker.py
notebooks/: post_run_etl.ipynb
orchestrator/: cli.py  console_logger.py  decision_pipeline.py  meta_manager.py  objectives.py  probes.py  queued_runtime.py  runner.py  scheduler.py
safety/: __init__.py  governor.py
schemas/: __init__.py  agent.py  logs.py  memory.py  objectives.py  run.py
scripts/: analyze_run.sh  analyze_simulation.py  analyze_society_study.py  benchmark_steering.py  compute_vectors.sh  eval_vectors.sh  intervention_layer_sweep.py  migrate_remove_trade_records.py  run_baselines.py  run_small.sh  run_society_study.py  split_eval_prompts.py  steering_eval_ci.py  validate_judge.py  verify_gemini_steering.py  verify_personality.py  verify_steering.py  view_results.py
steering/: baseline_bfi.py  ci_checks.py  compute_caa.py  eval.py  eval_dose_response.py  hooks.py  layer_sweep.py  llm_judge.py  (+4 more)
(+2544 files in other folders)
