[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-society-sim"
version = "0.1.0"
description = "LLM-based social town simulation with activation-steered personalities"
readme = "README.md"
authors = [
  { name = "Persona Society Lab" }
]
requires-python = ">=3.11,<3.13"
dependencies = [
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "networkx>=3.2",
  "sqlalchemy>=2.0",
  "duckdb>=0.9",
  "pyarrow>=15.0",
  "transformers>=4.41",
  "torch>=2.1",
  "accelerate>=0.28",
  "rich>=13.7",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.1",
  "pytest-asyncio>=0.23",
  "ruff>=0.4"
]

eof
