[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "persona-society-sim"
version = "0.1.0"
description = "LLM-based social town simulation with activation-steered personalities"
readme = "README.md"
authors = [
  { name = "Persona Society Lab" }
]
requires-python = ">=3.10,<3.13"
dependencies = [
  "torch==2.2.0",
  "torchvision==0.17.0",
  "torchaudio==2.2.0",
  "transformers==4.45.0",
  "accelerate==0.30.1",
  "safetensors==0.4.3",
  "tokenizers==0.20.0",
  "huggingface-hub==0.25.0",
  "pydantic==2.7.3",
  "pyyaml==6.0.1",
  "numpy==1.26.4",
  "pandas==2.2.2",
  "scipy==1.13.1",
  "networkx==3.2.1",
  "sqlalchemy==2.0.30",
  "duckdb==0.10.3",
  "pyarrow==15.0.2",
  "rich==13.7.1",
  "tqdm==4.66.4",
  "click==8.1.7"
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.1",
  "pytest-asyncio==0.23.7",
  "pytest-cov==5.0.0",
  "ruff==0.4.7",
  "mypy==1.10.0",
  "types-PyYAML==6.0.12.20240311"
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "docs*", "scripts*", "data*", "configs*"]
